<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">银行实训系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Version 1.0</string>
    
    <string name="hello">Welcome to use!</string>
    <string name="settings">Settings</string>
    
    <string name="title_login">登录</string>
    <string name="title_study">学习</string>
    <string name="userclass">用户班级</string>
    <string name="ok">确定</string>
    
    <string name="main_head_title">银行实训系统</string>
    <string name="login_head_title">实训2013</string>
    <string name="login_title">登&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="login">登录</string>
    <string name="username">用&#160;户&#160;名</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="serverip">服务器IP</string>
    <string name="remember_user">记住用户名和密码</string>
    <string name="remember_ip">记住服务器IP</string>
    <string name="login_btn">&#160;&#160;&#160;登&#160;&#160;&#160;录&#160;&#160;&#160;</string>
    <string name="cancel">取消</string>
    
    <string name="tishi">提示</string>
    <string name="fpidialog_install">未检测到FlashPlayer，点击“确定”安装</string>
    <string name="edittext_null">用户名、密码、ServerIP不能为空</string>
    <string name="exit">确定要退出?</string>
    
    <string name="server_port">:8080/</string>
    <string name="loginAction">:8080/flow/android/androidLogin.action</string>
    <string name="logoutAction">:8080/flowandroid/androidLogout.action</string>
    <string name="courseStuAction">:8080/flow/android/androidCourseStu.action</string>
    <string name="courseTeaAction">:8080/flow/android/androidCourseTea.action</string>
    <string name="login_tishi">登录中，请稍候...</string>
    <string name="user_error">用户名或密码错误</string>
    <string name="net_error">网络链接错误</string>
    
    <string name="currentCourseAction">flow/android/getCourseById.action</string>
    
    <string name="getEngineIdAction">:8080/flow/android/androidGetEngineId.action</string>
    <string name="consoleurl">:8080/flow/SwfAndroid/Console.html</string>
    <string name="paperurl">:8080/flow/SwfAndroid/Paper.html</string>
    <string name="fakeurl">:8080/flow/SwfAndroid/Fake.html</string>
    
	<!-- 用来与推送过来的字符串进行比较来判断是否含有相应的信息 -->
    <string-array name="strcompare">
		<!-- 学生id -->
        <item>sid</item>
        <!-- 当前课程流 -->
        <item>a</item>
        <!-- 当前老师 -->
        <item>b</item>
        <!-- 当前模式 -->
        <item>c</item>
        <!-- 当前案例 caseId -->
        <item>d1</item>
        <!-- 当前案例 caseName -->
        <item>d2</item>
        <!-- 当前案例 caseKindId -->
        <item>d3</item>
        <!-- 当前案例 engineId -->
        <item>d4</item>
        <!-- sourceId -->
        <item>e1</item>
        <!-- sourceName -->
        <item>e2</item>
        <!-- sourceUrl -->
        <item>e3</item>
        <!-- mediaTypeId -->
        <item>e4</item>
        <!-- sourceTypeId -->
        <item>e5</item>
        <!-- seq -->
        <item>e6</item>
        <!-- caseId -->
        <item>e7</item>
    </string-array>
    
    <!-- 
    <string-array name="province">
        <item >北京</item>
        <item >上海</item>
        <item >天津</item>
        <item >重庆</item>
    </string-array>
    <string-array name="beijing">
        <item >北京</item>
        <item >海淀</item>
        <item >朝阳</item>
        <item >顺义</item>
        <item >怀柔</item>
    </string-array>
    <string-array name="shanghai">
        <item >上海</item>
        <item >闵行</item>
        <item >宝山</item>
        <item >嘉定</item>
        <item >浦东</item>
    </string-array>
    <string-array name="tianjing">
        <item >天津</item>
        <item >武清</item>
        <item >宝坻</item>
        <item >东丽</item>
        <item >西青</item>
    </string-array>
    <string-array name="chongqing">
        <item >重庆</item>
        <item >永川</item>
        <item >合川</item>
        <item >南川</item>
        <item >江津</item>
    </string-array>
    <string-array name="beijing_des">
        <item >北京aaa</item>
        <item >海淀aaa</item>
        <item >朝阳aaa</item>
        <item >顺义aaa</item>
        <item >怀柔aaa</item>
    </string-array>
    <string-array name="shanghai_des">
        <item >上海bbb</item>
        <item >闵行bbb</item>
        <item >宝山bbb</item>
        <item >嘉定bbb</item>
        <item >浦东bbb</item>
    </string-array>
    <string-array name="tianjing_des">
        <item >天津bbb</item>
        <item >武清bbb</item>
        <item >宝坻bbb</item>
        <item >东丽bbb</item>
        <item >西青bbb</item>
    </string-array>
    <string-array name="chongqing_des">
        <item >重庆bbb</item>
        <item >永川bbb</item>
        <item >合川bbb</item>
        <item >南川bbb</item>
        <item >江津bbb</item>
    </string-array>
    
    <string-array name="fruit">
        <item>apple</item>
        <item>banana</item>
    </string-array>
    <string-array name="apple">
        <item >green apple</item>
        <item>red apple</item>
    </string-array>
    <string-array name="banana">
        <item>yellow banana</item>
        <item>green banana</item>
    </string-array>
    <string-array name="apple_des">
        <item >green apple aaa</item>
        <item>red apple aaa</item>
    </string-array>
    <string-array name="banana_des">
        <item>yellow banana bbb</item>
        <item>green banana bbb</item>
    </string-array>
	 -->
</resources>
